--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,7 +21,7 @@
 }
 
 @font-face {
-  font-family: "Bbas Neuee";
+  font-family: "Bebas Neue";
   src: url("./../fonts/AnyConv.com__ofont.ru_Bebas\ Neue.woff") format("woff"),
     url("./../fonts/AnyConv.com__ofont.ru_Bebas\ Neue.woff2") format("woff");
   font-display: swap;
@@ -826,7 +826,6 @@ body {
 
 //------------------- BURGERS ---------
 
-
 .burger__content {
   width: 100%;
   height: 550px;
@@ -887,7 +886,6 @@ body {
 }
 
 @media (max-width: 650px) {
-
   .most-img,
   .fresh-img,
   .more-img {
@@ -915,8 +913,8 @@ body {
 //----------- CHOOSE ------------------
 .chooce__content {
   height: 990px;
-    margin-top: -24px;
-    padding-top: 24px;
+  margin-top: -24px;
+  padding-top: 24px;
   background-color: #fff;
 }
 
@@ -965,7 +963,6 @@ body {
 .inner-row__column {
   text-align: center;
   max-width: 23rem;
-
 }
 
 .inner-row__column--m {
@@ -1028,7 +1025,7 @@ body {
 
 .order-img {
   font-size: 17px;
-  font-family: "AlfaSlabOne";
+  font-family: "Alfa Slab One";
   color: rgb(255, 255, 255);
   text-transform: uppercase;
   line-height: 2.25;
@@ -1055,11 +1052,11 @@ body {
 }
 
 @media (max-width: 1440px) {
-.chooce__content {
-  height: 990px;
-  height: auto;
-  padding-bottom: 70px;
-}
+  .chooce__content {
+    height: 990px;
+    height: auto;
+    padding-bottom: 70px;
+  }
 
   .chooce__inner {
     margin-top: 64px;
@@ -1200,6 +1197,7 @@ body {
   .suptitle-txt {
     padding: 0 20px;
   }
+
   .inner-row {
     align-items: center;
     gap: 80px;
@@ -1238,5 +1236,440 @@ body {
     width: 160px;
     height: 50px;
     margin-left: 20px;
+  }
+}
+
+//------------ DISCOVER ---------
+
+.discover__content {
+  background-color: #fff;
+  height: 505px;
+}
+
+.discover-row {
+  max-width: 1300px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  padding-top: 57px;
+
+  background-color: rgb(255, 255, 255);
+  box-shadow: 18px 24px 43px 0px rgb(0, 0, 0, .4);
+  width: 1294px;
+  height: 492px;
+  position: relative;
+}
+
+.discover-row__info {
+  text-align: center;
+  width: 50%;
+}
+
+.discover__subtitle {
+  font-size: 30px;
+  font-family: "Bebas Neue";
+  font-weight: 700;
+  color: rgb(61, 61, 61);
+  text-transform: uppercase;
+  letter-spacing: .1rem;
+  text-align: left;
+  margin-top: 13px;
+  position: relative;
+  left: 57px;
+  z-index: 1;
+}
+
+.discover__title {
+  font-size: 42px;
+  font-family: "Alfa Slab One";
+  color: rgb(61, 37, 20);
+  text-transform: uppercase;
+  line-height: 1.1;
+  letter-spacing: -.02rem;
+  margin-left: -30px;
+}
+
+.discover-txt {
+  width: 507px;
+  font-size: 20px;
+  font-family: "Montserrat";
+  color: rgb(61, 61, 61);
+  line-height: 1.64;
+  letter-spacing: .016rem;
+  margin-top: 30px;
+  text-align: left;
+
+  position: relative;
+  left: 61px;
+  z-index: 1;
+}
+
+.swiper {
+  display: flex;
+  max-width: 660px;
+  height: 440px;
+  margin-top: -19px;
+  margin-right: 20px;
+  position: relative;
+  background-color: #000;
+}
+
+.swiper-slide {
+  display: flex;
+}
+
+.swiper-slide img {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-pagination-bullet {
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  background-color: hsl(266, 86%, 53%);
+  border: 2px solid #000;
+  opacity: .3;
+  position: relative;
+  top: 120px;
+  left: -220px;
+  z-index: 1;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: yellow;
+  opacity: .4;
+}
+
+@media (max-width: 1440px) {
+  .discover__content {
+    padding-top: 52px;
+    background-color: #fff;
+    margin-top: -2px;
+    height: 575px;
+    padding-bottom: 40px;
+  }
+
+  .discover-row {
+    padding-top: 54px;
+    height: 502px;
+  }
+
+  .discover-txt {
+    margin-top: 31px;
+    line-height: 1.67;
+  }
+}
+
+@media (max-width: 1327px) {
+  .discover__content {
+    height: 965px;
+  }
+
+  .discover-row {
+    margin-top: -40px;
+    height: 472px;
+  }
+
+  .discover__subtitle {
+    margin-left: 200px;
+    margin-top: -10px;
+    margin-bottom: 20px;
+  }
+
+  .discover__title {
+    width: 750px;
+    line-height: 1;
+  }
+
+  .discover-row {
+    display: block;
+    width: 900px;
+    height: 930px;
+  }
+
+  .discover-row__info {
+    margin-left: 150px;
+    margin-bottom: 70px;
+  }
+
+  .swiper {
+    width: 100%;
+    margin-left: 50%;
+    transform: translate(-50%);
+  }
+
+  .swiper-pagination-bullet {
+    position: relative;
+    top: 575px;
+    left: 0;
+    z-index: 1;
+  }
+}
+
+@media (max-width: 1200px) {
+  .discover__content {
+    height: 910px;
+  }
+
+  .discover-row {
+    height: 875px;
+    width: 75vw;
+  }
+
+  .discover__subtitle {
+    margin-left: 15vw;
+    margin-top: -10px;
+    margin-bottom: 20px;
+  }
+
+  .discover-txt {
+    margin-top: 25px;
+    line-height: 1.3;
+  }
+
+  .discover-row__img {
+    margin-left: 13vw;
+    margin-top: 50px;
+  }
+
+  .swiper-pagination-bullet {
+    position: relative;
+    top: 562px;
+    left: 0;
+  }
+}
+
+@media (max-width: 1020px) {
+  .discover__subtitle {
+    margin-left: 50%;
+    transform: translate(-40%);
+  }
+
+  .discover__title {
+    margin-left: 50%;
+    transform: translate(-45%);
+  }
+
+  .discover-txt {
+    margin-left: 50%;
+    transform: translate(-53%);
+  }
+}
+
+@media (max-width: 990px) {
+  .discover__content {
+    height: 890px;
+  }
+
+  .discover-row {
+    height: 860px;
+    width: 75vw;
+  }
+
+  .discover__subtitle {
+    font-size: 28px;
+  }
+
+  .discover__title {
+    font-size: 40px;
+  }
+
+  .discover-txt {
+    font-size: 18px;
+    line-height: 1.4;
+  }
+
+  .swiper-pagination-bullet {
+    top: 560px;
+  }
+}
+
+@media (max-width: 882px) {
+  .swiper {
+    width: 90%;
+  }
+
+  .swiper-pagination-bullet {
+    top: 555px;
+    left: -20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .discover__content {
+    height: 760px;
+  }
+
+  .discover-row {
+    height: 730px;
+    width: 75vw;
+  }
+
+  .discover__subtitle {
+    font-size: 26px;
+    margin-left: 50%;
+    transform: translate(-65%);
+  }
+
+  .discover__title {
+    font-size: 38px;
+    margin-left: 50%;
+    transform: translate(-50%);
+  }
+
+  .discover-txt {
+    width: 500px;
+    font-size: 16px;
+    line-height: 1.6;
+    margin-left: 50%;
+    transform: translate(-65%);
+  }
+
+  .swiper {
+    width: 80%;
+    height: 340px;
+    margin-top: -35px;
+  }
+
+  .swiper-pagination-bullet {
+    top: 440px;
+    left: 20px;
+  }
+}
+
+@media (max-width: 575px) {
+  .discover__content {
+    margin-top: -25px;
+    height: 670px;
+  }
+
+  .discover-row {
+    height: 640px;
+  }
+
+  .discover__subtitle {
+    font-size: 24px;
+    margin-left: 11vw;
+  }
+
+  .discover__title {
+    font-size: 32px;
+    margin-left: 50%;
+    transform: translate(-55%);
+  }
+
+  .discover-txt {
+    width: 400px;
+    font-size: 16px;
+    margin-left: 50%;
+    transform: translate(-72%);
+    padding: 0 10px;
+  }
+
+  .swiper {
+    width: 70%;
+    height: 240px;
+    margin-top: -35px;
+  }
+
+  .swiper-pagination-bullet {
+    width: 16px;
+    height: 16px;
+    top: 330px;
+    left: -10px;
+  }
+
+  .swiper-cube-shadow {
+    display: none;
+  }
+}
+
+
+@media (max-width: 480px) {
+  .discover__content {
+    margin-top: -20px;
+    height: 660px;
+  }
+
+  .discover-row {
+    height: 635px;
+  }
+
+  .discover__subtitle {
+    font-size: 22px;
+    margin-left: 7.5vw;
+  }
+
+  .discover__title {
+    font-size: 26px;
+    margin-left: 50%;
+    transform: translate(-58%);
+  }
+
+  .discover-txt {
+    width: 300px;
+    font-size: 16px;
+    margin-left: 50%;
+    transform: translate(-89%);
+    margin-top: 20px;
+  }
+
+  .swiper {
+    width: 90%;
+    height: 200px;
+    margin-top: -35px;
+  }
+
+  .swiper-pagination-bullet {
+    width: 16px;
+    height: 16px;
+    top: 290px;
+    left: 0px;
+  }
+}
+
+@media (max-width: 320px) {
+  .discover__content {
+    margin-top: -40px;
+    margin-top: -20px;
+    height: 570px;
+  }
+
+  .discover-row {
+    height: 550px;
+  }
+
+  .discover__subtitle {
+    font-size: 22px;
+    margin-left: -25px;
+    margin-top: -20px;
+    margin-bottom: 15px;
+  }
+
+  .discover__title {
+    font-size: 18px;
+    margin-left: 30px;
+  }
+
+  .discover-txt {
+    width: 250px;
+    font-size: 14px;
+    margin-left: 10px;
+    margin-top: 20px;
+    padding: 0 20px;
+  }
+
+  .swiper {
+    width: 90%;
+    height: 150px;
+    margin-top: -45px;
+  }
+
+  .swiper-pagination-bullet {
+    width: 16px;
+    height: 16px;
+    top: 235px;
   }
 }
